--- a/style.css
+++ b/style.css
@@ -281,3 +281,101 @@ body {
 .slider-wrapper:hover .cursor{
     opacity: 1;
 }
+
+
+.❤{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    height: auto;
+    flex-wrap: wrap;
+}
+
+
+.🃏{
+    position: relative;
+    border-radius: 10px;
+    margin: 10px;
+    width: 300px;
+    height: 500px;
+    background: #fff;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
+}
+
+.📦{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transform-origin: left;
+    transform-style: preserve-3d;
+    box-shadow: 10px 20px 40px rgba(0,0,0,0.25);
+    background: #000;
+    border-radius: 10px;
+    transition: 1s ease;
+}
+
+img{
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform-style: preserve-3d;
+}
+
+.🃏:hover .📦{
+    transform: rotateY(-180deg);
+    opacity: 0;
+}
+
+.🎶{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.📚{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+span{
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    color: red;
+    margin: 10px;
+    line-height: 1em;
+}
+
+p{
+    text-align: center;
+    color: #000;
+}
+
+a{
+    margin: 20px;
+    text-align: center;
+    text-decoration: none;
+    background: #ff0202;
+    padding: 10px;
+    letter-spacing: 1px;
+    color: #fff;
+}
+a:hover{
+    background: rgb(255, 0, 0);
+    transition: 0.3s ease;
+}
