--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
     box-sizing: border-box;
     transition: all 250ms ease;
 }
+::-webkit-scrollbar{
+    display: none;
+}
 body {
-    padding-inline: 2.5vw;
     font-family: 'Poppins', sans-serif;
     user-select: none;
 }
@@ -19,7 +21,9 @@ body {
     width: 100%;
     gap: 10px;
     margin-top: 1.5vw;
-    position: relative;
+    position: sticky;
+    top: 0;
+    padding-inline: 2.5vw;
 }
 .align-center {
     display: flex;
@@ -168,9 +172,9 @@ body {
 }
 .menuActive {
     display: inline-block;
+    z-index: 10;
     height: 50vh;
     opacity: 1;
-    z-index: 10;
 }
 .triangle {
     position: absolute;
@@ -185,7 +189,7 @@ body {
     height: calc(100vh - 120px);
     position: relative;
     width: 100%;
-    margin-top: 20px;
+    margin: 20px 0 50px 0;
     overflow: hidden;
 }
 .slider-wrapper {
@@ -195,24 +199,43 @@ body {
     user-select: none;
     overflow: hidden;
     position: absolute;
+    height: 100%;
     top: 50%;
     transform: translate(0%, -50%);
-    gap: 10px;
 }
 .slider-item {
-    width: 60vw;
+    width: 100vw;
     transition: all 0.7s ease-in-out;
     display: grid;
     place-items: center;
     position: relative;
 }
-.slider-item video {
+.slider-item img {
     height: 100%;
     width: 100%;
-    border-radius: 15px;
+    object-fit: cover;
 }
 .grabbing {
     cursor: grabbing;
+}
+.cursor{
+    position: absolute;
+    width: 100px;
+    padding: 10px 15px;
+    border-radius: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+    pointer-events: none;
+    opacity: 0;
+}
+.slider:hover .cursor{
+    opacity: 1;
+}
+.cursor p{
+    color: #000;
+    text-transform: uppercase;
 }
 .video-heading{
     position: absolute;
@@ -227,19 +250,26 @@ body {
     display: none;
 }
 .characters{
-    margin-top: 10vh;
+    margin-top: 5vh;
+    min-height: 100vh;
+    padding-inline: 2.5vw;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
 }
 .charHeading{
-    font-weight: 800;
-    text-align: center;
-    text-transform: uppercase;
-    color: #E60012;
+    font-weight: 600;
+    text-align: left;
+    color: #000;
+    font-size: 2rem;
+    width: 100%;
 }
 .charSlider{
-    width: 100%;
+    width: 75%;
     display: flex;
     justify-content: center;
     position: relative;
+    margin-top: 20px;
 }
 .arrow{
     height: 20%;
@@ -252,13 +282,13 @@ body {
 }
 @keyframes blink {
     0%{
-        opacity: 0;
-    }
-    50%{
         opacity: 1;
     }
-    100%{
+    50%{
         opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
 .switch-wrapper{
@@ -321,6 +351,14 @@ body {
     position: relative;
     cursor: pointer;
 }
+.line{
+    padding-inline: 2.5vw;
+}
+/*@media (min-width: 200px) and (max-width: 400px) {
+    .slider-wrapper{
+        top: 100px;
+    }
+}
 @media (min-width: 300px) and (max-width: 400px) {
     .video-heading{
         font-size: 14px;
@@ -344,10 +382,10 @@ body {
     .slider{
         height: 30vh;
     }
-}
+} */
 
 @media (min-width: 500px) and (max-width: 600px) {
-    .video-heading{
+    /* .video-heading{
         font-size: 16px;
         line-height: 1;
     }
@@ -356,15 +394,23 @@ body {
     }
     .slider{
         height: 30vh;
+    } */
+    .switch-wrapper > .align-center > .fa-solid{
+        color: #191919;
+        font-size: 70%;
     }
 }
 
 @media (min-width: 600px) and (max-width: 700px) {
-    .slider-wrapper{
+    /* .slider-wrapper{
         top: 125px;
     }
     .slider{
         height: 35vh;
+    } */
+    .switch-wrapper > .align-center > .fa-solid{
+        color: #191919;
+        font-size: 70%;
     }
 }
 
@@ -384,8 +430,11 @@ body {
         display: flex;
         color: #E60012;
     }
-}
-@media (min-width: 700px) and (max-width: 800px) {
+    .charSlider{
+        width: 100%;
+    }
+ }
+/*@media (min-width: 700px) and (max-width: 800px) {
     .slider-wrapper{
         top: 140px;
     }
@@ -458,4 +507,188 @@ body {
     .slider{
         height: 75vh;
     }
+} */
+.featured{
+    margin-block: 50px;
+    padding-inline: 2.5vw;
 }
+fieldset {
+    grid-template-columns: repeat(4, auto);
+    inline-size: 80vw;
+    display: grid;
+    place-items: center;
+    grid-auto-flow: column;
+    grid-template-rows: 50vh;
+    border: none;
+    width: 100%;
+    
+    > label {
+      background: var(--img) 50% / cover;
+      width: 0;
+      min-width: 100%;
+      /* height: 70%; */
+      position: relative;
+      overflow: hidden;
+      border: 1px solid #000;
+  
+      &:focus-within {
+        outline: none;
+      }
+  
+      > input {
+        opacity: 0;
+      }
+    }
+.box{
+    position: absolute;
+    height: 40%;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 -5px 20px 5px #000;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 20px 10px;
+}
+.gname{
+    color: #000;
+    font-weight: 700;
+    cursor: pointer;
+}
+.gname:hover{
+    color: #E60012;
+}
+.status{
+    color: #fff;
+    background: #E60012;
+    border-radius: 100px;
+    padding: 2px;
+    text-align: center;
+    margin-left: 5px;
+}
+.Co{
+    border-left: 3px solid #E60012;
+    color: #000;
+    padding-inline: 10px;
+    margin-top: 15px;
+    line-height: 1;
+}
+.pre-order{
+    background: #4B5CCE;
+}
+  
+    @media (prefers-reduced-motion: no-preference) {
+      label {
+        transition: 2s
+          linear(
+            0,
+            0.01,
+            0.04 1.6%,
+            0.161 3.3%,
+            0.816 9.4%,
+            1.046,
+            1.189 14.4%,
+            1.231,
+            1.254 17%,
+            1.259,
+            1.257 18.6%,
+            1.236,
+            1.194 22.3%,
+            1.057 27%,
+            0.999 29.4%,
+            0.955 32.1%,
+            0.942,
+            0.935 34.9%,
+            0.933,
+            0.939 38.4%,
+            1 47.3%,
+            1.011,
+            1.017 52.6%,
+            1.016 56.4%,
+            1 65.2%,
+            0.996 70.2%,
+            1.001 100%,
+            1
+          );
+      }
+    }
+    > label:has(input:checked) {
+      width: 30vw;
+      height: 100%;
+    }
+    > label:has(input:checked) + * {
+      width: 8vw;
+    }
+    &:has(label:nth-child(2) > input:checked) > label:nth-child(1){
+        height: 70%;
+    }
+    &:has(label:nth-child(2) > input:checked) > label:nth-child(3){
+        height: 70%;
+    }
+    &:has(label:nth-child(2) > input:checked) > label:nth-child(4){
+        height: 50%;
+    }
+    &:has(label:nth-child(1) > input:checked) > label:nth-child(2){
+        height: 80%;
+    }
+    &:has(label:nth-child(1) > input:checked) > label:nth-child(3){
+        height: 60%;
+    }
+    &:has(label:nth-child(1) > input:checked) > label:nth-child(4){
+        height: 40%;
+    }
+    &:has(label:nth-child(3) > input:checked) > label:nth-child(1){
+        height: 60%;
+    }
+    &:has(label:nth-child(3) > input:checked) > label:nth-child(2){
+        height: 80%;
+    }    
+    &:has(label:nth-child(3) > input:checked) > label:nth-child(4){
+        height: 80%;
+    }
+    &:has(label:nth-child(4) > input:checked) > label:nth-child(3){
+        height: 80%;
+    }
+    &:has(label:nth-child(4) > input:checked) > label:nth-child(2){
+        height: 60%;
+    }
+    &:has(label:nth-child(4) > input:checked) > label:nth-child(1){
+        height: 40%;
+    }
+
+  }
+  fieldset > label:has(input:checked) > .box{
+    bottom: 0;
+  }
+  
+  p{
+    color: #fff;
+  }
+  
+  a{
+    color: tomato;
+  }
+  .featHeading{
+    font-weight: 600;
+    margin-bottom: 20px;
+    font-size: 2rem;
+  }
+  .mario{
+    min-height: 90vh;
+    width: 90vw;
+    position: relative;
+    margin-block: 50px;
+  }
+  #mario canvas{
+    width: 95vw !important;
+    height: 500px !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid #000;
+    cursor: grab;
+    background: #E60012;
+  }
