--- a/style.css
+++ b/style.css
@@ -17,16 +17,18 @@ body {
 }
 
 .navbar {
-  height: 60px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   gap: 10px;
-  margin-top: 1.5vw;
-  position: sticky;
-  top: 0;
   padding-inline: 2.5vw;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff;
 }
 
 .align-center {
@@ -221,10 +223,10 @@ body {
 }
 
 .slider {
-  height: calc(100vh - 120px);
+  height: calc(100vh - 180px);
   position: relative;
   width: 100%;
-  margin: 20px 0 50px 0;
+  margin: 80px 0 50px 0;
   overflow: hidden;
 }
 .video-heading {
@@ -255,6 +257,26 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+.slider-item:nth-child(1) {
+  background: url(./Assets/01.png);
+  background-size: cover;
+  background-position: right;
+}
+.slider-item:nth-child(2) {
+  background: url(./Assets/02.png);
+  background-size: cover;
+  background-position: right;
+}
+.slider-item:nth-child(3) {
+  background: url(./Assets/03.png);
+  background-size: cover;
+  background-position: right;
+}
+.slider-item:nth-child(4) {
+  background: url(./Assets/04.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .slider-item img {
@@ -295,11 +317,14 @@ body {
 }
 
 .characters {
-  margin-block: 5vh;
+  padding-block: 5vh;
   padding-inline: 2.5vw;
   flex-direction: column;
   display: flex;
   align-items: center;
+  background: url(./Assets/bricks.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .charHeading,
@@ -307,7 +332,7 @@ body {
 .storeHeading {
   font-weight: 600;
   text-align: left;
-  color: #000;
+  color: #fff;
   font-size: 2rem;
   width: 100%;
 }
@@ -649,6 +674,7 @@ a {
 
 .featHeading {
   margin-bottom: 20px;
+  color: #000;
 }
 
 .mario {
@@ -674,11 +700,18 @@ a {
   display: flex;
   align-items: center;
   flex-direction: column;
+  background: url(./Assets/bricks.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: -5px;
 }
 
 .storeHeading {
   padding-inline: 2.5vw;
   margin-block: 20px;
+  color: #fff;
+  text-shadow: 0 0 10px 2px #000;
 }
 
 .store-showcase {
@@ -880,4 +913,10 @@ a {
     top: 53%;
     right: 5%;
   }
+}
+.best-sellers {
+  min-height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
 }
