--- a/style.css
+++ b/style.css
@@ -867,3 +867,129 @@ a {
   background-size: cover;
   background-position: center;
 }
+
+
+
+
+
+
+
+
+
+body{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+.container{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    display: flex;
+    margin: 40px 0;
+}
+.container .card{
+    position: relative;
+    width: 250px;
+    height: 400px;
+    margin: 20px;
+    overflow: hidden;
+    /* border-radius: 15px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+}
+/* .container .card:hover{
+    box-shadow: 0 0 5px #0f00e0,
+                0 0 15px #0f00e0,
+                0 0 25px #0f00e0,
+                0 0 100px #0f00e0;
+} */
+.container .card .content{
+    position: absolute;
+    bottom: -160px;
+    width: 100%;
+    height: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    flex-direction: column;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 -10px 10px rgba(0, 0, 0,0.1);
+    border: 1px solid rgba(255,255,255,0.2);
+    transition: 0.7s;
+    cursor: pointer;
+}
+img{
+    height: 400px;
+
+}
+
+
+
+.container .card:hover .content{
+    bottom: 0;
+}
+.container .card .content .contentbx h3{
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+    /* margin: 0 0 25px; */
+    line-height: 1.1em;
+    opacity: 0;
+    transition: 0.4s;
+    transform: translateY(-20px);
+    top: -15px;
+
+}
+.container .card:hover .content .contentbx h3{
+    opacity: 1;
+    transform: translateY(0px);
+}
+.container .card .content .contentbx h3:hover{
+    letter-spacing: 4px;
+    color: chartreuse;
+    font-weight: 800;
+}
+.container .card:hover .content .contentbx h3 span{
+    font-size: 12px;
+    font-weight: 300;
+    text-transform: initial;
+}
+.container .card:hover .content .sci{
+    bottom: 70px;
+    padding-right: 80px;
+}
+.sci{
+    color: white;
+    padding-right: 40px;
+    font-size: 100% ;
+    margin-bottom: 10px;
+}
+
+
+.btn{
+    
+        margin: 20px;
+        text-align: center;
+        text-decoration: none;
+        background: #ff0202;
+        /* padding-left: 10px; */
+        letter-spacing: 1px;
+        color: #fff;
+        
+}
+h1{
+    color: #ff0202;
+    text-align: center;
+    font-size: 300%;
+}
